[Slots] Fix misaligned screenshots

--- a/assets/slots/slots.css
+++ b/assets/slots/slots.css
@@ -17,8 +17,8 @@ table, th, td {
 }
 .slot {
     background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
+    width: 115px;
+    height: 115px;
 }
 .charslot_1 {
     background-image: url('../spritesheet/characters_sheet_1.png');
@@ -102,7 +102,6 @@ table, th, td {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
     background-color: rgba(0,0,0,.4);
     color: #000;
 }
